src/pages/home/home.css
.home-container {
  /* flex-grow: 1; */
  display: flex;
  flex-direction: column;
  gap: 1rem;
  section {
    margin-bottom: 3rem;
  }
}

.home-hero {
  width: 100%;
  background-color: gray;
  border-radius: 1rem;
  aspect-ratio: 16/9;
  position: relative;
  img {
    aspect-ratio: 16/9;
    display: flex;
    border-radius: inherit;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.home-hero-title {
  font-size: clamp(3rem, 11vw, 15rem);
  /* letter-spacing: -10px; */
  /* color: var(--clr-neutral-000); */
  font-weight: bold;
  position: absolute;
  line-height: 1;
  /* top: 3rem; */
  top: 50%;
  transform: translateY(-50%);
  mix-blend-mode: color-dodge;
  color: var(--clr-primary);
  left: 3rem;
}

.home-hero-description {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  top: 50%;
  /* left: 50%; */
  right: 12.5%;
  text-shadow: 0 3px 0.5rem rgba(0, 0, 0, 0.05);
  transform: translateY(-50%);
  /* gap: 0.5rem; */
  color: var(--clr-neutral-000);
  font-size: 1.25rem;
  a {
    color: var(--clr-primary);
  }
  p {
  }
}

.home-new-arrivals {
  & > div:first-child {
    display: flex;
    justify-content: space-between;
    align-items: center;
    a {
      text-decoration: none;
      color: var(--clr-primary);
      &:hover {
        text-decoration: underline;
      }
    }
  }
}

.home-categories,
.home-new-arrivals {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.home-categories-grid,
.home-product-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 1rem;
}

.home-categories-grid a {
  text-decoration: none;
  border: 1px solid var(--clr-neutral-200);
  border-radius: 1rem;
  padding: 1rem;
  transition: all 0.2s ease-in-out;
  color: inherit;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  &:hover {
    border-color: var(--clr-primary);
  }
}

@media (max-width: 650px) {
  .home-hero-title {
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: clamp(2rem, 13vw, 10rem);
    color: var(--clr-primary);
    mix-blend-mode: color-dodge;
    /* width: 100%; */
  }
  .home-hero-description {
    right: initial;
    left: 50%;
    transform: translateX(-50%);
    font-size: 1rem;
    /* gap: 0.25rem; */
    top: initial;
    bottom: 5%;

    font-size: clamp(0.8rem, 1.5vw, 1.25rem);
  }
}

